--- a/src/sample/EventMenu/EventCreate.fxml
+++ b/src/sample/EventMenu/EventCreate.fxml
@@ -1,77 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.GuestMenuHomeController">
-  <children>
-    <ImageView fitHeight="445.0" fitWidth="600.0" pickOnBounds="true">
-      <image>
-        <Image url="@../Pictures/rubylogo-e1489090066133.jpg" />
-      </image>
-    </ImageView>
-    <GridPane hgap="5.0" layoutY="18.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="5.0">
-      <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      </columnConstraints>
-      <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-      <children>
-        <ImageView fx:id="imageView1" accessibleText="ImageHere" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-          <image>
-            <Image url="@../Pictures/sunset-pool_1203-3192.jpg" />
-          </image>
-        </ImageView>
-        <Pane style="-fx-border-color: black;" GridPane.rowIndex="2">
-          <children>
-            <Button fx:id="buttonBookRoom" mnemonicParsing="false" onAction="#handleBookRoom" prefHeight="100.0" prefWidth="201.0" text="Book Room" />
-            <Text layoutX="5.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View our variety of room and book one you like." textAlignment="CENTER" wrappingWidth="199.748046875" />
-          </children>
-        </Pane>
-        <Pane styleClass="pane" GridPane.columnIndex="2" GridPane.rowIndex="2">
-          <children>
-            <Button fx:id="buttonEvent" mnemonicParsing="false" onAction="#handleEventButton" prefHeight="100.0" prefWidth="200.0" text="View Events" />
-            <Text layoutX="1.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View our extravagent events. You can create your own too." textAlignment="CENTER" wrappingWidth="198.271484375" />
-          </children>
-        </Pane>
-        <Pane styleClass="pane" GridPane.rowIndex="3">
-          <GridPane.margin>
-            <Insets />
-          </GridPane.margin>
-          <children>
-            <Button fx:id="buttonSettings" mnemonicParsing="false" onAction="#handleSettings" prefHeight="100.0" prefWidth="200.0" text="Account Settings" textAlignment="CENTER">
-              <padding>
-                <Insets top="10.0" />
-              </padding>
-            </Button>
-            <Text layoutX="14.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="View Account settings and history. Edit Account details." textAlignment="CENTER" wrappingWidth="177.185546875" />
-          </children>
-        </Pane>
-        <Pane styleClass="pane" GridPane.columnIndex="2" GridPane.rowIndex="3">
-          <children>
-            <Button fx:id="buttonExit" layoutX="-2.0" layoutY="-2.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="100.0" prefWidth="200.0" text="Logout" />
-          </children>
-        </Pane>
-        <Label layoutY="30.0" text="Welcome, what would you to do?" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      </children>
-
-    </GridPane>
-  </children>
+<AnchorPane prefHeight="385.0" prefWidth="546.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EventMenu.EventCreateController">
+   <children>
+      <ComboBox layoutX="62.0" layoutY="37.0" prefWidth="150.0" promptText="Pick Event" />
+      <Label layoutX="327.0" layoutY="112.0" text="Picture of Venue" />
+      <DatePicker fx:id="checkInDatePicker" layoutX="296.0" layoutY="205.0" />
+      <DatePicker fx:id="checkOutDatePicker" layoutX="296.0" layoutY="271.0" />
+      <Label layoutX="327.0" layoutY="175.0" text="Event Start Date:" />
+      <Label layoutX="341.0" layoutY="248.0" text="Event End Date:" />
+      <GridPane layoutX="37.0" layoutY="85.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+           <TextField fx:id="nameOfEvent" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+           <TextField fx:id="numOfPeople" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+           <TextField fx:id="nameOfOrganization" GridPane.columnIndex="1" />
+           <TextField fx:id="otherDetails" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+           <TextField fx:id="selectVendor" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+         </children>
+      </GridPane>
+      <Button fx:id="b1" layoutX="185.0" layoutY="332.0" mnemonicParsing="false" onAction="#b12" text="Button" />
+      <CheckBox layoutX="327.0" layoutY="41.0" mnemonicParsing="false" text="CheckBox" />
+      <Button fx:id="buttibnExit" layoutX="435.0" layoutY="332.0" mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+   </children>
 </AnchorPane>
