--- a/src/sample/GuestMenu/PaymentWindow.fxml
+++ b/src/sample/GuestMenu/PaymentWindow.fxml
@@ -38,7 +38,9 @@
             <ChoiceBox fx:id="expMonthBox" layoutX="77.0" layoutY="67.0" prefHeight="25.0" prefWidth="40.0" />
             <Label layoutX="14.0" layoutY="71.0" text="Exp. Date" />
             <ChoiceBox fx:id="expYearBox" layoutX="123.0" layoutY="67.0" prefHeight="25.0" prefWidth="61.0" />
-            <Button fx:id="confirmBook" layoutX="47.0" layoutY="125.0" mnemonicParsing="false" onAction="#handleConfirm" text="Confirm Booking" />
+            <Button fx:id="confirmBook" layoutX="46.0" layoutY="141.0" mnemonicParsing="false" onAction="#handleConfirm" text="Confirm Booking" />
+            <Label layoutX="14.0" layoutY="105.0" text="CCV:" />
+            <TextField layoutX="49.0" layoutY="101.0" prefHeight="25.0" prefWidth="40.0" />
          </children>
       </AnchorPane>
    </children>
