--- a/src/sample/Unused/EventMenu/EventInfo.fxml
+++ b/src/sample/Unused/EventMenu/EventInfo.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EventMenu.EventInfo">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Unused.EventMenu.EventInfo">
    <children>
       <VBox layoutX="67.0" layoutY="14.0" prefHeight="200.0" prefWidth="100.0" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="280.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
