--- a/src/sample/GuestMenu/GuestRoomTest1.fxml
+++ b/src/sample/GuestMenu/GuestRoomTest1.fxml
@@ -10,10 +10,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="459.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.GuestRoomController">
+<?import java.net.URL?>
+<AnchorPane id="AnchorPane" prefHeight="459.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.GuestRoomController">
    <children>
       <AnchorPane prefHeight="460.0" prefWidth="600.0">
          <children>
+            <ImageView fitHeight="471.0" fitWidth="611.0">
+               <image>
+                  <Image url="@../Pictures/abstract-background-design_1297-82.jpg" />
+               </image>
+            </ImageView>
             <Button fx:id="signoutButton" layoutX="528.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleSignout" text="Signout" />
             <Label layoutX="165.0" layoutY="9.0" text="Welcome to Ruby Resort!">
                <font>
@@ -31,6 +37,16 @@
                   <Font size="18.0" />
                </font>
             </Label>
+            <AnchorPane layoutX="9.0" layoutY="44.0" prefHeight="106.0" prefWidth="362.0" style="-fx-background-color: #E0E0E0;">
+               <children>
+                  <Label layoutX="14.0" layoutY="33.0" text="Check-In" />
+                  <DatePicker fx:id="checkInDate" layoutX="77.0" layoutY="29.0" prefHeight="25.0" prefWidth="167.0" />
+                  <Label layoutX="9.0" layoutY="66.0" prefHeight="9.0" prefWidth="57.0" text="Check-Out" />
+                  <DatePicker fx:id="checkOutDate" layoutX="77.0" layoutY="62.0" prefHeight="25.0" prefWidth="167.0" />
+                  <Button fx:id="populateRooms" layoutX="255.0" layoutY="41.0" mnemonicParsing="false" onAction="#populateRooms" text="View Rooms" />
+                  <Label layoutX="42.0" layoutY="6.0" text="Please select a check-in and check-out date to begin" />
+               </children>
+            </AnchorPane>
             <AnchorPane layoutX="9.0" layoutY="157.0" prefHeight="256.0" prefWidth="410.0" style="-fx-background-color: E0E0E0;">
                <children>
                   <ImageView fx:id="imageViewRoom" fitHeight="137.0" fitWidth="231.0" layoutX="174.0" layoutY="56.0" pickOnBounds="true">
@@ -53,17 +69,10 @@
                   </TableView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="9.0" layoutY="44.0" prefHeight="106.0" prefWidth="362.0" style="-fx-background-color: E0E0E0;">
-               <children>
-                  <Label layoutX="14.0" layoutY="33.0" text="Check-In" />
-                  <DatePicker fx:id="checkInDate" layoutX="77.0" layoutY="29.0" prefHeight="25.0" prefWidth="167.0" />
-                  <Label layoutX="9.0" layoutY="66.0" prefHeight="9.0" prefWidth="57.0" text="Check-Out" />
-                  <DatePicker fx:id="checkOutDate" layoutX="77.0" layoutY="62.0" prefHeight="25.0" prefWidth="167.0" />
-                  <Button fx:id="populateRooms" layoutX="255.0" layoutY="41.0" mnemonicParsing="false" onAction="#populateRooms" text="View Rooms" />
-                  <Label layoutX="42.0" layoutY="6.0" text="Please select a check-in and check-out date to begin" />
-               </children>
-            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@../LoginMenu/LoginCSS.css" />
+   </stylesheets>
 </AnchorPane>
