--- a/src/sample/GuestMenu/PaymentWindow.fxml
+++ b/src/sample/GuestMenu/PaymentWindow.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.PaymentController">
+<?import java.net.URL?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.PaymentController">
    <children>
       <Label layoutX="38.0" layoutY="22.0" text="Reservation Details">
          <font>
@@ -38,10 +39,14 @@
             <ChoiceBox fx:id="expMonthBox" layoutX="77.0" layoutY="67.0" prefHeight="25.0" prefWidth="40.0" />
             <Label layoutX="14.0" layoutY="71.0" text="Exp. Date" />
             <ChoiceBox fx:id="expYearBox" layoutX="123.0" layoutY="67.0" prefHeight="25.0" prefWidth="61.0" />
-            <Button fx:id="confirmBook" layoutX="46.0" layoutY="141.0" mnemonicParsing="false" onAction="#handleConfirm" text="Confirm Booking" />
+            <Button fx:id="confirmBook" layoutX="11.0" layoutY="141.0" mnemonicParsing="false" onAction="#handleConfirm" text="Confirm Booking" />
             <Label layoutX="14.0" layoutY="105.0" text="CCV:" />
             <TextField layoutX="49.0" layoutY="101.0" prefHeight="25.0" prefWidth="40.0" />
+            <Button fx:id="quitButton" layoutX="140.0" layoutY="141.0" mnemonicParsing="false" onAction="#handleQuit" text="Quit" />
          </children>
       </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@../LoginMenu/LoginCSS.css" />
+   </stylesheets>
 </AnchorPane>
