--- a/src/sample/LoginMenu/LoginMenu.fxml
+++ b/src/sample/LoginMenu/LoginMenu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="262.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginMenu.LoginMenuController">
+<AnchorPane id="AnchorPane" prefHeight="262.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginMenu.LoginMenuController">
     <children>
       <TabPane prefHeight="322.0" prefWidth="320.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -38,12 +39,12 @@
                         <CheckBox fx:id="checkBox" alignment="CENTER" contentDisplay="BOTTOM" layoutX="149.0" layoutY="214.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="17.0" prefWidth="113.0" text="Show Password?" textAlignment="JUSTIFY" textFill="WHITE" />
                         <TextField fx:id="textFieldForPassword" focusTraversable="false" layoutX="88.0" layoutY="144.0" prefHeight="25.0" prefWidth="196.0" promptText="ex: &quot;openSesame&quot;" visible="false" />
                         <Label layoutX="55.0" layoutY="258.0" prefHeight="17.0" prefWidth="161.0" text="No Account? Click to Sign Up!" textFill="WHITE" />
-                        <ImageView fitHeight="43.0" fitWidth="44.0" layoutX="236.0" layoutY="245.0">
+                        <ImageView fitHeight="43.0" fitWidth="44.0" layoutX="221.0" layoutY="245.0">
                            <image>
                               <Image url="@../Pictures/ruby-on-rails.png" />
                            </image>
                         </ImageView>
-                        <Button id="img_only" fx:id="buttonCreate" layoutX="221.0" layoutY="251.0" mnemonicParsing="false" onAction="#handleButtonCreate" opacity="0.0" prefHeight="32.0" prefWidth="44.0" style="-fx-shape: &quot;M 350 400 L 200 250 L 250 200 L 450 200 L 500 250 L 350 400 &quot;;" text="Create" />
+                        <Button id="img_only" fx:id="buttonCreate" layoutX="221.0" layoutY="251.0" mnemonicParsing="false" onAction="#handleButtonCreate" opacity="0.0" prefHeight="32.0" prefWidth="44.0" style="-fx-shape: &quot;M 350 400 L 200 250 L 250 200 L 450 200 L 500 250 L 350 400 &quot;;" />
                      </children>
                   </AnchorPane>
             </content>
@@ -74,4 +75,7 @@
         </tabs>
       </TabPane>
     </children>
+  <stylesheets>
+  <URL value="@../LoginMenu/LoginCSS.css" />
+</stylesheets>
 </AnchorPane>
