--- a/src/sample/ManagerMenu/NewManagerHome.fxml
+++ b/src/sample/ManagerMenu/NewManagerHome.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -8,11 +9,20 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="389.0" prefWidth="454.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ManagerMenu.ManagerHomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="389.0" prefWidth="454.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ManagerMenu.ManagerHomeController">
    <children>
+      <ImageView fitHeight="389.0" fitWidth="454.0">
+         <image>
+            <Image url="@../Pictures/abstract-background-design_1297-82.jpg" />
+         </image>
+      </ImageView>
       <TabPane prefHeight="389.0" prefWidth="454.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Employee Info">
@@ -28,6 +38,14 @@
                            <font>
                               <Font size="14.0" />
                            </font>
+                           <textFill>
+                              <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                                 <stops>
+                                    <Stop color="BLACK" />
+                                    <Stop color="WHITE" offset="1.0" />
+                                 </stops>
+                              </RadialGradient>
+                           </textFill>
                         </Label>
                         <TextField fx:id="firstNameText" layoutX="270.0" layoutY="39.0" prefHeight="25.0" prefWidth="99.0" />
                         <Label layoutX="200.0" layoutY="43.0" text="First Name:" />
@@ -89,4 +107,7 @@
         </tabs>
       </TabPane>
    </children>
+  <stylesheets>
+    <URL value="@../ManagerMenu/ManagerHome.css" />
+  </stylesheets>
 </AnchorPane>
