--- a/src/sample/GuestMenu/GuestRoomTest1.fxml
+++ b/src/sample/GuestMenu/GuestRoomTest1.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -10,17 +11,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import java.net.URL?>
 <AnchorPane id="AnchorPane" prefHeight="459.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.GuestRoomController">
    <children>
       <AnchorPane prefHeight="460.0" prefWidth="600.0">
          <children>
-            <ImageView fitHeight="471.0" fitWidth="611.0">
-               <image>
-                  <Image url="@../Pictures/abstract-background-design_1297-82.jpg" />
-               </image>
-            </ImageView>
-            <Button fx:id="signoutButton" layoutX="528.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleSignout" text="Signout" />
+            <Button fx:id="signoutButton" layoutX="14.0" layoutY="427.0" mnemonicParsing="false" onAction="#handleSignout" text="Signout" />
             <Label layoutX="165.0" layoutY="9.0" text="Welcome to Ruby Resort!">
                <font>
                   <Font size="24.0" />
@@ -69,6 +64,7 @@
                   </TableView>
                </children>
             </AnchorPane>
+            <Button fx:id="buttonPaymentHistory" layoutX="477.0" layoutY="427.0" mnemonicParsing="false" onAction="#handleHistory" text="Payment History" />
          </children>
       </AnchorPane>
    </children>
