--- a/src/sample/Unused/GuestAccountWindow.fxml
+++ b/src/sample/Unused/GuestAccountWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="389.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.GuestAccountWindow">
+<AnchorPane prefHeight="389.0" prefWidth="584.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.GuestMenu.GuestAccountWindowController">
    <children>
       <TabPane prefHeight="402.0" prefWidth="597.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
